<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_Points"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/points"/>

    <item
            android:id="@+id/navigation_Team"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/edit_team"/>

    <item
            android:id="@+id/navigation_Fixtures"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/fixtures"/>

    <item
            android:id="@+id/navigation_Statistics"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/statistics"/>

    <item
            android:id="@+id/navigation_Leagues"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/leagues"/>


</menu>
